[tool.poetry]
name = "illuminate"
version = "0.1.0"
description = ""
authors = ["Nikola Milojica <nikola.milojica@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.7.7"
click = "^8.1.2"
SQLAlchemy = "^1.4.36"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
bandit = "^1.7.4"
pytest = "^5.2"

[tool.poetry.scripts]
illuminate = "illuminate.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
