[tool.poetry]
name = "illuminate"
version = "0.1.0"
description = ""
authors = ["Nikola Milojica <nikola.milojica@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.7.7"
click = "^8.1.2"
loguru = "^0.6.0"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.36"
tornado = "^6.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.3.0"
beautifulsoup4 = "^4.11.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = ">=5.2"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
tox = "^3.25.1"

[tool.poetry.scripts]
illuminate = "illuminate.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
