[tool.poetry]
authors = ["Nikola Milojica <nikola.milojica@protonmail.com>"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License"
]
description = "Lightwieght ETL Framework"
documentation = "https://nikolamilojica.github.io/illuminate/"
homepage = "https://github.com/nikolamilojica/illuminate"
include = [
    "LICENSE",
]
keywords = [
    "ETL",
    "Scraping"
]
license = "MIT"
name = "illuminated"
packages = [
    { include = "illuminate" }
]
repository = "https://github.com/nikolamilojica/illuminate"
version = "0.3.6"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
aiofile = "^3.8.1"
aioinflux = "^0.9.0"
alembic = "1.13.2"
asyncmy = "^0.2.5"
asyncpg = "0.29.0"
click = "^8.1.2"
loguru = "^0.6.0"
numpy = "1.26.4"
pandas = "^2.0.3"
psycopg2 = "2.9.9"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.31"}
tornado = "6.4.2"

[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.17.0"
bandit = "^1.7.4"
black = "^24.3.0,<25"
beautifulsoup4 = "^4.11.1"
flake8 = "^5.0.4"
markdown-include = "^0.8.0"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mypy = "^0.982"
pre-commit = "^2.20.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.19.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.8.2"
sqlalchemy2-stubs = "^0.0.2-alpha.27"
tox = "^4.3.5"

[tool.poetry.scripts]
illuminate = "illuminate.cli:cli"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
